<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAliment"
    android:orientation="vertical">

    <TextView
        android:text = "@string/ajout_d_un_aliment"
        android:textSize="34dp"
        android:paddingBottom="34dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nom_aliment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_aliment"/>

    <EditText
        android:id="@+id/famille_aliment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/famille_aliment"/>

    <Button
        android:id="@+id/ajout_aliment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/valider"/>

    <TextView
        android:text = "@string/suppression_d_un_aliment"
        android:textSize="34dp"
        android:paddingBottom="34dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nom_aliment_a_supprimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom_aliment"/>


    <Button
        android:id="@+id/suppression_aliment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/valider"/>

</LinearLayout>